--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
         <p>Group Members:</p>
         <ul>
-            <li>Full Name 1 - Student ID 1</li>
+            <li>Tse Ka Ying - 57847836</li>
             <li>Full Name 2 - Student ID 2</li>
             <li>Full Name 3 - Student ID 3</li>
             <li>Full Name 4 - Student ID 4</li>
