--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>CS1102 - Course Project - 2024/2025 Semester B</h1>
-        <h2>Project Topic: [Your Project Topic]</h2>
+        <h2>Project Topic: [hreat and Solutions for Internet Security in e-Banking]</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
@@ -19,7 +19,7 @@
         <p>Group Members:</p>
         <ul>
             <li>Tse Ka Ying - 57847836</li>
-            <li>Full Name 2 - Student ID 2</li>
+            <li>Wong Tin Yi - 57850275</li>
             <li>Full Name 3 - Student ID 3</li>
             <li>Full Name 4 - Student ID 4</li>
         </ul>
