--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>CS1102 - Course Project - 2024/2025 Semester B</h1>
-        <h2>Project Topic: [hreat and Solutions for Internet Security in e-Banking]</h2>
+        <h2>Project Topic: [Threat and Solutions for Internet Security in e-Banking]</h2>
         <ul>
             <li>HTML</li>
             <li>CSS</li>
