--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <h1>About Our Project</h1>
+        <h1>Threat of e-banking</h1>
     </header>
     <nav>
         <ul>
@@ -18,11 +18,11 @@
         </ul>
     </nav>
     <main>
-        <h2>Background</h2>
+        <h2>Encryption Technology Outdated</h2>
         <p>[Provide background information on your project topic.]</p>
-        <h2>Applications</h2>
+        <h2>Phishing</h2>
         <p>[Discuss applications of the technology.]</p>
-        <h2>Main Features/Functions</h2>
+        <h2>Man-in-the-middle attack</h2>
         <p>[Describe the main features or functions.]</p>
     </main>
     <footer>
