--- a/about.html
+++ b/about.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - CS1102 Project</title>
+    <title>Threat - CS1102 Project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Threat of e-banking</h1>
+        <h1>Threat</h1>
     </header>
     <nav>
         <ul>
