--- a/discovery.html
+++ b/discovery.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discovery - CS1102 Project</title>
+    <title>Solution - CS1102 Project</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Discovery</h1>
+        <h1>Solution</h1>
     </header>
     <nav>
         <ul>
