--- a/about.html
+++ b/about.html
@@ -21,7 +21,22 @@
         <h2>Encryption Technology Outdated</h2>
         <p>[The obsolescence of encryption technology represents a pervasive threat to electronic network security, often stemming from deficiencies in electronic banking security systems and easily compromised firewalls. This situation can lead to the illicit acquisition of internal data or information by external attackers. The prevalence of outdated encryption technology is especially noticeable in certain traditional and legacy software systems, which frequently lack timely updates and maintenance from technical teams, creating vulnerabilities that can be exploited, particularly in areas such as payment systems, database transmissions, and API communications. ]</p>
         <h2>Phishing</h2>
-        <p>[Discuss applications of the technology.]</p>
+<p>Phishing is a common form of online fraud where attackers send false messages to lure victims into providing sensitive personal information, which can then be used to access their bank accounts.</p>
+
+<h3>Types of Phishing</h3>
+<p>Phishing comes in various forms, with the most common being:</p>
+<ul>
+    <li>SMS Phishing</li>
+    <li>Email Phishing</li>
+    <li>Search Engine Phishing</li>
+</ul>
+<p>As technology evolves, these techniques become more sophisticated, giving rise to more targeted methods such as Spear Phishing and Vishing. Spear phishing specifically targets individuals, often using the identity of senior executives to send fake internal corporate emails, urging employees to quickly remit money or steal corporate information.</p>
+
+<h3>Phishing Techniques</h3>
+<p>Attackers disguise themselves as banking institutions, sending SMS, emails, and links that entice victims to click and enter their information. They may maliciously alter messages from legitimate banks, incorporating logos and misleading phrases like “Your account has been compromised” or offering discounts to lead targets to fake bank login interfaces for identity verification.</p>
+
+<h3>Impact of Artificial Intelligence</h3>
+<p>With the advancement of artificial intelligence, phishing attacks have evolved to target specific individuals more effectively. Attackers can create realistic videos and audio through synthetic images and voice alteration, increasing the victim's trust. They may also impersonate credible banking institutions over the phone to trick users into providing SMS verification codes or security information. By altering URLs, they can evade technical defenses, making phishing attacks even more challenging to counter.</p>
         <h2>Man-in-the-middle attacks</h2>
         <p>[Describe the main features or functions.]</p>
     </main>
