--- a/about.html
+++ b/about.html
@@ -19,8 +19,8 @@
     </nav>
     <main>
         <h2>Encryption Technology Outdated</h2>
-        <p>[The obsolescence of encryption technology represents a pervasive threat to electronic network security, often stemming from deficiencies in electronic banking security systems and easily compromised firewalls. This situation can lead to the illicit acquisition of internal data or information by external attackers. The prevalence of outdated encryption technology is especially noticeable in certain traditional and legacy software systems, which frequently lack timely updates and maintenance from technical teams, creating vulnerabilities that can be exploited, particularly in areas such as payment systems, database transmissions, and API communications. ]</p>
-        <h2>Phishing</h2>
+        <p>out</p>
+            <h2>Phishing</h2>
 <p>Phishing is a common form of online fraud where attackers send false messages to lure victims into providing sensitive personal information, which can then be used to access their bank accounts.</p>
 
 <h3>Types of Phishing</h3>
