--- a/about.html
+++ b/about.html
@@ -19,7 +19,21 @@
     </nav>
     <main>
         <h2>Encryption Technology Outdated</h2>
-        <p>out</p>
+        <p>
+    The obsolescence of encryption technology represents a pervasive threat to electronic network security, often stemming from deficiencies in electronic banking security systems and easily compromised firewalls. This situation can lead to the illicit acquisition of internal data or information by external attackers. The prevalence of outdated encryption technology is especially noticeable in certain traditional and legacy software systems, which frequently lack timely updates and maintenance from technical teams, creating vulnerabilities that can be exploited, particularly in areas such as payment systems, database transmissions, and API communications.
+</p>
+<p>
+    Common examples of obsolete encryption technology and their impacts include:
+</p>
+<ul>
+    <li><strong>Lack of Two-Factor Authentication:</strong> Some systems do not implement two-factor authentication mechanisms, relying solely on single verification methods (such as SMS), making their encryption technology susceptible to attacks.</li>
+    <li><strong>Exploitation of Security Vulnerabilities:</strong> Attackers can leverage security flaws within software to easily penetrate systems and access sensitive information.</li>
+    <li><strong>Risk of Data Breaches:</strong> Once encryption technology becomes outdated, internal data can be easily accessed by external attackers, leading to significant security risks.</li>
+    <li><strong>Inability to Identify Suspicious Activity:</strong> Outdated systems may fail to effectively recognize and respond to suspicious fund flows, putting banks and organizations at greater risk.</li>
+</ul>
+<p>
+    Obsolete encryption technology not only fails to adequately protect user data but also poses serious security threats. Over time, systems lacking updates become prime targets for attackers, allowing them to easily infiltrate and extract sensitive information. This vulnerability underscores the necessity for banks and other institutions to prioritize the modernization of encryption technologies to prevent data breaches and financial losses. Therefore, the obsolescence of encryption technology undoubtedly constitutes a significant electronic network security threat.
+</p>
             <h2>Phishing</h2>
 <p>Phishing is a common form of online fraud where attackers send false messages to lure victims into providing sensitive personal information, which can then be used to access their bank accounts.</p>
 
