--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="discovery.html">Discovery</a></li>
+            <li><a href="index.html">Background</a></li>
+            <li><a href="about.html">Threat</a></li>
+            <li><a href="discovery.html">Solution</a></li>
         </ul>
     </nav>
     <main>
