--- a/discovery.html
+++ b/discovery.html
@@ -12,9 +12,9 @@
     </header>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="discovery.html">Discovery</a></li>
+            <li><a href="index.html">Background</a></li>
+            <li><a href="about.html">Threats</a></li>
+            <li><a href="discovery.html">Solutions</a></li>
         </ul>
     </nav>
     <main>
