--- a/about.html
+++ b/about.html
@@ -44,6 +44,8 @@
     <li>Email Phishing</li>
     <li>Search Engine Phishing</li>
 </ul>
+
+<img src="https://KKKKA666.github.io/CS1102-Project/A_dynamic_and_visually_engaging_illustration.png" alt="Types of Phishing" style="max-width:100%; height:auto;">
 <p>As technology evolves, these techniques become more sophisticated, giving rise to more targeted methods such as Spear Phishing and Vishing. Spear phishing specifically targets individuals, often using the identity of senior executives to send fake internal corporate emails, urging employees to quickly remit money or steal corporate information.</p>
 
 <h3>Phishing Techniques</h3>
