--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
     <nav>
         <ul>
             <li><a href="index.html">Background</a></li>
-            <li><a href="about.html">Threats</a></li>
-            <li><a href="discovery.html">Solutions</a></li>
+            <li><a href="about.html">Threat</a></li>
+            <li><a href="discovery.html">Solution</a></li>
+            <li><a href="funfact.html">Funfact</a></li>
+            <li><a href="casestudy.html">Casestudy</a></li>
         </ul>
     </nav>
     <main>
