--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <p>This website explores the topic of [Your Project Topic].</p>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2024 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
