--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
             <li><a href="index.html">Background</a></li>
             <li><a href="about.html">Threat</a></li>
             <li><a href="discovery.html">Solution</a></li>
-            <li><a href="funfact.html">Funfact</a></li>
-            <li><a href="casestudy.html">Casestudy</a></li>
+            <li><a href="funfact.html">Fun Fact</a></li>
+            <li><a href="casestudy.html">Case Study</a></li>
         </ul>
     </nav>
     <main>
