--- a/funfact.html
+++ b/funfact.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fun Fact</title>
+    <title>Fun Fact - CS1102 Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Fun Fact</h1>
-    <p>這裡可以寫一些有趣的事實。</p>
+    <header>
+        <h1>Fun Fact</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Background</a></li>
+            <li><a href="about.html">Threats</a></li>
+            <li><a href="discovery.html">Solutions</a></li>
+            <li><a href="funfact.html">Solutions</a></li>
+            <li><a href="casestudy.html">Solutions</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Fun Fact 1</h2>
+        <p>[Discuss the fun fact.]</p>
+        <h2>Fun Fact 2</h2>
+        <p>[Discuss the fun fact.]</p>
+        <h2>Fun Fact 3</h2>
+        <p>[Discuss the fun fact.]</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
