--- a/casestudy.html
+++ b/casestudy.html
@@ -3,10 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Case Study</title>
+    <title>Case Study - CS1102 Project</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Case Study</h1>
-    <p>這裡可以寫一些案例研究的內容。</p>
+    <header>
+        <h1>Case Study</h1>
+    </header>
+    <nav>
+        <ul>
+            <li><a href="index.html">Background</a></li>
+            <li><a href="about.html">Threats</a></li>
+            <li><a href="discovery.html">Solutions</a></li>
+            <li><a href="funfact.html">Solutions</a></li>
+            <li><a href="casestudy.html">Solutions</a></li>
+        </ul>
+    </nav>
+    <main>
+        <h2>Case Study 1</h2>
+        <p>[Discuss the Case Study.]</p>
+        <h2>Case Study 2</h2>
+        <p>[Discuss the Case Study.]</p>
+        <h2>Case Study 3</h2>
+        <p>[Discuss the Case Study.]</p>
+    </main>
+    <footer>
+        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+    </footer>
+    <script src="script.js"></script>
 </body>
 </html>
