--- a/casestudy.html
+++ b/casestudy.html
@@ -22,10 +22,30 @@
     <main>
         <h2>Case Study 1</h2>
         <p>[Discuss the Case Study.]</p>
-        <h2>Case Study 2</h2>
-        <p>[Discuss the Case Study.]</p>
+        <h2>Case Study in Phishing</h2>
+        <p>Phishing attacks pose significant threats to organizations, leading to severe data leakage and financial losses. One notable case involved Belgium's Klein Bank, which suffered a major breach resulting in a loss of up to $75 million.</p>
+
+        <h3>Incident Overview</h3>
+        <p>The attack was executed using the executive phishing method. Attackers impersonated high-level executives and manipulated the finance department into making unauthorized fund transfers. This sophisticated approach exploited trust within the organization, leading to substantial monetary losses.</p>
+
+        <h3>Consequences</h3>
+        <h4>Financial Impact</h4>
+        <p>The direct financial loss of $75 million severely impacted the bank's cash flow, creating long-term financial strain. The average cost of data leakage vulnerabilities across organizations is estimated at $4.88 million, highlighting the broader financial implications.</p>
+
+        <h4>Reputation Damage</h4>
+        <p>The incident significantly tarnished the bank’s reputation, resulting in a loss of customer trust. Disillusioned users began transferring their accounts to competing banks, leading to a decline in customer loyalty and making it challenging to attract new clients.</p>
+
+        <h4>Regulatory and Compliance Issues</h4>
+        <p>The leakage of customer information triggered potential fines and increased compliance costs. The bank faced legal repercussions and stricter regulatory scrutiny, further complicating its recovery efforts.</p>
+
+        <h3>Conclusion</h3>
+        <p>The Klein Bank case underscores the critical importance of robust cybersecurity measures and the need for organizations to remain vigilant against phishing attacks. The repercussions extend beyond immediate financial losses to long-term impacts on reputation, customer loyalty, and regulatory compliance. Effective training and awareness programs for employees, especially in finance departments, are essential to mitigate such risks and protect organizational integrity.</p>
         <h2>Case Study 3</h2>
         <p>[Discuss the Case Study.]</p>
+
+        <h2>References</h2>
+        <p>[References]</p>
+        <p>[References]</p>
     </main>
     <footer>
         <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
