--- a/about.html
+++ b/about.html
@@ -15,6 +15,8 @@
             <li><a href="index.html">Background</a></li>
             <li><a href="about.html">Threats</a></li>
             <li><a href="discovery.html">Solutions</a></li>
+            <li><a href="funfact.html">Fun Fact</a></li>
+            <li><a href="casestudy.html">Case Study</a></li>
         </ul>
     </nav>
     <main>
