--- a/funfact.html
+++ b/funfact.html
@@ -20,11 +20,11 @@
         </ul>
     </nav>
     <main>
-        <h2>Fun Fact 1</h2>
+<h2>Fun Fact 1</h2>
 <p>[Discuss the fun fact.]</p>
 
 <h2>Fun Fact 2</h2>
-<p>Screenshot Restrictions in Hong Kong's Electronic Banking Applications</p>
+<p><strong style="font-size: 1.2em;">Screenshot Restrictions in Hong Kong's Electronic Banking Applications</strong></p>
 <p>The recent incident regarding screenshot restrictions in Hong Kong's electronic banking applications has sparked significant discussion, particularly concerning the differences between iOS and Android platforms. Major banks, such as HSBC Hong Kong and the Bank of China, have implemented policies that prohibit Android users from taking screenshots within their apps.</p>
 <p>The primary concern driving this decision is the inherent security vulnerabilities associated with Android applications, which make it challenging to safeguard sensitive information like passwords and transaction records. This inability to effectively prevent screenshots raises the risk of identity theft and unauthorized access to personal data.</p>
 <p>In contrast, iPhone applications are perceived as more secure, leading to a disparity in user experience across different devices. By restricting screenshots, banks aim to enhance user data protection and underscore the importance of cybersecurity in today’s digital landscape. This move highlights the ongoing efforts to secure financial transactions and maintain user trust in electronic banking services.</p>
