--- a/funfact.html
+++ b/funfact.html
@@ -31,6 +31,14 @@
 
 <h2>Fun Fact 3</h2>
 <p>[Discuss the fun fact.]</p>
+
+<h2>References</h2>
+<p>
+    <a href="https://inews.hket.com/article/3656491/【Network Security】Is iPhone more secure? %E3%80%80Two major banks' Android%20Apps ban screenshots" target="_blank">
+        Is iPhone more secure? Two major banks' Android Apps ban screenshots
+    </a>
+</p>
+
     </main>
     <footer>
         <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
