--- a/casestudy.html
+++ b/casestudy.html
@@ -51,7 +51,7 @@
 </p>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2024 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
