--- a/discovery.html
+++ b/discovery.html
@@ -51,7 +51,7 @@
 <p>MFA is an effective security measure that strengthens defenses against phishing attacks. However, it's essential to remain aware of its limitations and continue to educate users about best practices in digital security. By combining MFA with user awareness and training, organizations can create a more secure online environment for everyone.</p>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2024 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
