--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     <main>
         <h2>Welcome to Our Project!</h2>
         <p>This website explores the topic of [Your Project Topic].</p>
+        <p>What is e-banking?</p>
 
     </main>
     <footer>
