--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
         <p>[Describe the main features or functions.]</p>
     </main>
     <footer>
-        <p>&copy; 2024 [CS1102]. All rights reserved.</p>
+        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
