--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <ul>
             <li>Tse Ka Ying - 57847836</li>
             <li>Wong Tin Yi - 57850275</li>
-            <li>Full Name 3 - Student ID 3</li>
+            <li>Lai Ka Lok  - 56340935</li>
             <li>Full Name 4 - Student ID 4</li>
         </ul>
     </header>
