--- a/discovery.html
+++ b/discovery.html
@@ -21,7 +21,33 @@
     </nav>
     <main>
         <h2>Solution 1</h2>
-<p>[Discuss the discoveries made during the project.]</p>
+<p><p>
+    Despite the inevitability of the challenges posed by outdated encryption technology, many electronic wallet companies today are continuously innovating and launching various new verification and protective systems to mitigate associated risks. Here are some key solutions being implemented:
+</p>
+<p><strong>Preventive Measures</strong></p>
+<ul>
+    <li><strong>Strengthening Identity Verification:</strong>
+        Users can effectively reduce risks by enhancing identity verification and access controls.
+        <ul>
+            <li><strong>Two-Factor Authentication (2FA):</strong> This widely adopted method requires users to provide two different authentication factors to confirm their identity. For example, when making a large online purchase, users may need to confirm the transaction through their mobile banking app.</li>
+        </ul>
+    </li>
+    <li><strong>Mobile Security Features:</strong>
+        Banks like HSBC require users to set a mobile security password and undergo biometric verification when logging into their online banking systems. This ensures that transactions are executed by the genuine user, even if a fraudster obtains the user's credit card information.
+    </li>
+</ul>
+<p><strong>Remedial Measures</strong></p>
+<ul>
+    <li><strong>Account Freezing Features:</strong>
+        Many banks have implemented features that allow them to freeze accounts automatically if suspicious activity is detected, such as frequent large transactions. This prevents unauthorized transactions and mitigates potential losses.
+    </li>
+    <li><strong>Proactive Notifications:</strong>
+        Banks often send notifications regarding suspicious transactions via SMS, promptly informing customers of their credit card expenditure records. This real-time alert system helps customers remain vigilant about their credit card activity and make informed decisions about freezing their cards to avert losses.
+    </li>
+</ul>
+<p>
+    Updating encryption technology is critical for safeguarding financial assets and protecting users' data from potential breaches. Electronic banks must actively enhance and refine their security measures to tackle the evolving threats posed by cyber-attacks. It is equally important for users to maintain a high level of security awareness and regularly update their personal security settings as a proactive defense against such threats.
+</p></p>
 
 <h2>Solution 2</h2>
 <p>Enhancing Security with Multi-Factor Authentication (MFA)</p>
