--- a/discovery.html
+++ b/discovery.html
@@ -45,6 +45,7 @@
         Banks often send notifications regarding suspicious transactions via SMS, promptly informing customers of their credit card expenditure records. This real-time alert system helps customers remain vigilant about their credit card activity and make informed decisions about freezing their cards to avert losses.
     </li>
 </ul>
+    <h3>Conclusion</h3>
 <p>
     Updating encryption technology is critical for safeguarding financial assets and protecting users' data from potential breaches. Electronic banks must actively enhance and refine their security measures to tackle the evolving threats posed by cyber-attacks. It is equally important for users to maintain a high level of security awareness and regularly update their personal security settings as a proactive defense against such threats.
 </p></p>
