--- a/funfact.html
+++ b/funfact.html
@@ -21,7 +21,16 @@
     </nav>
     <main>
 <h2>Fun Fact 1</h2>
-<p>[Discuss the fun fact.]</p>
+<p><strong style="font-size: 1.2em;">Payme Link</strong></p>
+<p>
+    PayMe, as a popular electronic wallet software in Hong Kong, is favored by young people for its user-friendly features. Many people use PayMe to send red packets or good wishes to friends during festivals. However, with the emergence of fraud cases in recent years, the security risks of PayMe have come to light.
+</p>
+<p>
+    A netizen wanted to use PayMe to make a payment to a friend. Typically, when the friend clicks the payment link, it opens in the PayMe app on their phone, and the transaction is completed. However, this netizen accidentally sent the Paylink link to a WhatsApp group. Since this link did not point to a specific user, if other group members clicked the link, they would also receive the payment immediately.
+</p>
+<p>
+    To address this security issue, PayMe launched a unique link feature, allowing the recipient to set up their own personalized payment link within the app. This way, when the payer clicks the link, they can only make the payment to the specified recipient, significantly reducing the risk of erroneous transfers and effectively protecting the recipient's personal interests.
+</p>
 
 <h2>Fun Fact 2</h2>
 <p><strong style="font-size: 1.2em;">Screenshot Restrictions in Hong Kong's Electronic Banking Applications</strong></p>
