--- a/discovery.html
+++ b/discovery.html
@@ -51,7 +51,7 @@
 </p></p>
 
 <h2>Solution 2</h2>
-<p>Enhancing Security with Multi-Factor Authentication (MFA)</p>
+<p><strong style="font-size: 1.2em;">Enhancing Security with Multi-Factor Authentication (MFA)</strong></p>
 <p>Multi-factor authentication (MFA) is a powerful tool in the fight against phishing attacks, providing an extra layer of security for users. By requiring individuals to verify their identity through at least two different methods, MFA significantly reduces the risk of unauthorized access.</p>
 
 <h3>How MFA Works</h3>
