--- a/about.html
+++ b/about.html
@@ -32,6 +32,7 @@
     <li><strong>Exploitation of Security Vulnerabilities:</strong> Attackers can leverage security flaws within software to easily penetrate systems and access sensitive information.</li>
     <li><strong>Risk of Data Breaches:</strong> Once encryption technology becomes outdated, internal data can be easily accessed by external attackers, leading to significant security risks.</li>
     <li><strong>Inability to Identify Suspicious Activity:</strong> Outdated systems may fail to effectively recognize and respond to suspicious fund flows, putting banks and organizations at greater risk.</li>
+    <img src="A_dynamic_and_visually_engaging_illustration_representing_the_concept_of_phishing_attacks_The_image_should_include_three_distinct_scenes_1_SMS_Phishing_showing_a_smartphone_with_a_suspicious_text_message_and_a_shadowy_figure_in_the_background_2_Email.png" alt="Types of Phishing" style="max-width:20%; height:auto;"> 
 </ul>
 <p>
     Obsolete encryption technology not only fails to adequately protect user data but also poses serious security threats. Over time, systems lacking updates become prime targets for attackers, allowing them to easily infiltrate and extract sensitive information. This vulnerability underscores the necessity for banks and other institutions to prioritize the modernization of encryption technologies to prevent data breaches and financial losses. Therefore, the obsolescence of encryption technology undoubtedly constitutes a significant electronic network security threat.
@@ -39,7 +40,7 @@
             <h2>Phishing</h2>
 <p>Phishing is a common form of online fraud where attackers send false messages to lure victims into providing sensitive personal information, which can then be used to access their bank accounts.</p>
 
-<h3>Types of Phishing</h3>
+<h2>Types of Phishing</h2>
 <p>Phishing comes in various forms, with the most common being:</p>
 <ul>
     <li>SMS Phishing</li>
@@ -50,16 +51,16 @@
 <img src="A_dynamic_and_visually_engaging_illustration_representing_the_concept_of_phishing_attacks_The_image_should_include_three_distinct_scenes_1_SMS_Phishing_showing_a_smartphone_with_a_suspicious_text_message_and_a_shadowy_figure_in_the_background_2_Email.png" alt="Types of Phishing" style="max-width:20%; height:auto;">
 <p>As technology evolves, these techniques become more sophisticated, giving rise to more targeted methods such as Spear Phishing and Vishing. Spear phishing specifically targets individuals, often using the identity of senior executives to send fake internal corporate emails, urging employees to quickly remit money or steal corporate information.</p>
 
-<h3>Phishing Techniques</h3>
+<h2>Phishing Techniques</h2>
 <p>Attackers disguise themselves as banking institutions, sending SMS, emails, and links that entice victims to click and enter their information. They may maliciously alter messages from legitimate banks, incorporating logos and misleading phrases like “Your account has been compromised” or offering discounts to lead targets to fake bank login interfaces for identity verification.</p>
 
-<h3>Impact of Artificial Intelligence</h3>
+<h2>Impact of Artificial Intelligence</h2>
 <p>With the advancement of artificial intelligence, phishing attacks have evolved to target specific individuals more effectively. Attackers can create realistic videos and audio through synthetic images and voice alteration, increasing the victim's trust. They may also impersonate credible banking institutions over the phone to trick users into providing SMS verification codes or security information. By altering URLs, they can evade technical defenses, making phishing attacks even more challenging to counter.</p>
         <h2>Man-in-the-middle attacks</h2>
         <p>[Describe the main features or functions.]</p>
     </main>
     <footer>
-        <p>&copy; 2024 [Your Group Name]. All rights reserved.</p>
+        <p>&copy; 2025 [CS1102]. All rights reserved.</p>
     </footer>
     <script src="script.js"></script>
 </body>
