--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
     <li><strong>Exploitation of Security Vulnerabilities:</strong> Attackers can leverage security flaws within software to easily penetrate systems and access sensitive information.</li>
     <li><strong>Risk of Data Breaches:</strong> Once encryption technology becomes outdated, internal data can be easily accessed by external attackers, leading to significant security risks.</li>
     <li><strong>Inability to Identify Suspicious Activity:</strong> Outdated systems may fail to effectively recognize and respond to suspicious fund flows, putting banks and organizations at greater risk.</li>
-    <img src="A_dynamic_and_visually_engaging_illustration_representing_the_concept_of_phishing_attacks_The_image_should_include_three_distinct_scenes_1_SMS_Phishing_showing_a_smartphone_with_a_suspicious_text_message_and_a_shadowy_figure_in_the_background_2_Email.png" alt="Types of Phishing" style="max-width:20%; height:auto;"> 
+    <img src="images.jpg" alt="Types of Phishing" style="max-width:20%; height:auto;"> 
 </ul>
 <p>
     Obsolete encryption technology not only fails to adequately protect user data but also poses serious security threats. Over time, systems lacking updates become prime targets for attackers, allowing them to easily infiltrate and extract sensitive information. This vulnerability underscores the necessity for banks and other institutions to prioritize the modernization of encryption technologies to prevent data breaches and financial losses. Therefore, the obsolescence of encryption technology undoubtedly constitutes a significant electronic network security threat.
