--- a/funfact.html
+++ b/funfact.html
@@ -32,6 +32,8 @@
     To address this security issue, PayMe launched a unique link feature, allowing the recipient to set up their own personalized payment link within the app. This way, when the payer clicks the link, they can only make the payment to the specified recipient, significantly reducing the risk of erroneous transfers and effectively protecting the recipient's personal interests.
 </p>
 
+<img src="eyJidWNrZXQiOiJoa2J0LWltYWdlLWJ1Y2tldCIsImtleSI6ImRhdGEvaW1hZ2VzL2Z1bGwvMTAvMzcvMTAzNzY4LmpwZyIsImVkaXRzIjp7InJlc2l6ZSI6eyJ3aWR0aCI6MTIwMCwiaGVpZ2h0IjoxLCJmaXQiOiJvdXRzaWRlIn19fQ==.webp" alt="Types of Phishing" style="max-width:20%; height:auto;">
+
 <h2>Fun Fact 2</h2>
 <p><strong style="font-size: 1.2em;">Screenshot Restrictions in Hong Kong's Electronic Banking Applications</strong></p>
 <p>The recent incident regarding screenshot restrictions in Hong Kong's electronic banking applications has sparked significant discussion, particularly concerning the differences between iOS and Android platforms. Major banks, such as HSBC Hong Kong and the Bank of China, have implemented policies that prohibit Android users from taking screenshots within their apps.</p>
