--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li>Tse Ka Ying - 57847836</li>
             <li>Wong Tin Yi - 57850275</li>
             <li>Lai Ka Lok  - 56340935</li>
-            <li>Full Name 4 - Student ID 4</li>
+            <li>Lo Sik Ying - 58091842</li>
         </ul>
     </header>
     <nav>
