--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <h2>Welcome to Our Website!</h2>
         <p>What is e-banking?</p>
         <p>In nowadays digital society, many banks increasingly transfer their services online which provide more convenient services to customers through e-banking apps. Implementing electronic technology and network, e-banking offers an extensive variety of financial goods and services. This technological evolution brings the banking services to customers’ fingertips and allows them conveniently to use the services through apps or net such as paying bill, fun transfer as well as establish bank accounts. Although it is convenient, there are many pros and cons when using e-banking, we also need to consider the security problem seriously.</p>
-        <img src="Background 1.jpg" align=“right" > 
+        <img src="Background 1.JPG" align=“right" > 
     </main>
    <footer>
         <p>&copy; 2024 [CS1102]. All rights reserved.</p>
