--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
             <img src="Background 1.JPG" style="max-width:35%; height:auto;">
         </div>
     </main>
+        <h3>Pros of e-banking</h3>
+        <h4>Convenience:</h4> <p>Enable customers to click a button then can make transactions or manage the bank accounts rapidly from anywhere with internet access, regardless of working hours or location. It can be conducted 24 hours a day, 7 days a week, without physical visit to the bank.</p>
    <footer>
         <p>&copy; 2024 [CS1102]. All rights reserved.</p>
     </footer>
